--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 /* fonts */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&family=Montserrat&display=swap");
 html {
   font-size: 100%;
 } /*16px*/
@@ -42,8 +42,8 @@ html {
   --green-dark: #0f5132;
 
   /* fonts  */
-  --headingFont: 'Roboto', sans-serif;
-  --bodyFont: 'Nunito', sans-serif;
+  --headingFont: "Roboto", sans-serif;
+  --bodyFont: "Nunito", sans-serif;
   --smallText: 0.7em;
   /* rest of the vars */
   --backgroundColor: var(--grey-50);
@@ -252,8 +252,129 @@ ul {
   margin: 0 auto;
   margin-top: -1rem;
 }
+
+li {
+  list-style-type: none;
+}
 /*
 =============== 
 Sidebar
 ===============
 */
+
+.sidebar-toggle {
+  position: fixed;
+  top: 2rem;
+  right: 3rem;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  transition: var(--transition);
+  color: var(--primary-400);
+  cursor: pointer;
+  animation: bounce 2.5s ease-in-out infinite;
+}
+
+.sidebar-toggle:hover {
+  color: var(--primary-800);
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/*
+==================== 
+    sidebar
+====================
+*/
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  row-gap: 1rem;
+  box-shadow: var(--shadow-2);
+  transition: var(--transition);
+  transform: translate(-100%);
+}
+
+.show-sidebar {
+  transform: translate(0) !important;
+}
+
+@media screen and (min-width: 600px) {
+  .sidebar {
+    width: 400px;
+  }
+}
+
+.sidebar-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+}
+.close-btn {
+  font-size: 1.75rem;
+  background: none;
+  border: none;
+  transition: var(--transition);
+  cursor: pointer;
+  color: var(--red-dark);
+}
+.close-btn:hover {
+  transform: rotate(360deg);
+}
+
+.x-logo {
+  color: var(--primary-500);
+}
+
+.logo {
+  margin: 0;
+  color: var(--grey-500);
+}
+
+.links a {
+  display: block;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  padding: 1.5rem 1rem;
+  color: var(--grey-500);
+  transition: var(--transition);
+}
+.links a:hover {
+  background: var(--primary-200);
+  padding-left: 2rem;
+}
+
+.social-links {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.social-icon {
+  display: block;
+  font-size: 1.5rem;
+  color: var(--primary-500);
+  padding-bottom: 2rem;
+  transition: var(--transition);
+}
+
+.social-icon:hover {
+  transform: translateY(-10px);
+}
